--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -2,242 +2,7 @@
 layout: default
 ---
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{page.title}}</title>
-    <link rel="icon" href="Figures/icon.png" type="image/x-icon">
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="ionicons/css/ionicons.min.css" rel="stylesheet">
-    <link href="css/animate.min.css" rel="stylesheet">
-    <link href="css/aos.css" rel="stylesheet">
-    <!-- main style -->
-    <link href="css/style.css" rel="stylesheet">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-</head>
-
-<body>
-
-    <!-- Preloader -->
-    <div id="preloader">
-        <div id="status">
-
-            <div class="preloader" aria-busy="true" aria-label="Loading, please wait." role="progressbar">
-            </div>
-
-        </div>
-    </div>
-    <!-- ./Preloader -->
-
-    <!-- header -->
-    <header class="navbar-fixed-top">
-        <nav>
-            <ul>
-                |
-                <li><a href="#about">About</a></li>
-                |
-                <li><a href="#experience">Publications</a></li>
-                |
-                <li><a href="#projects">Blogs</a></li>
-                |
-                <li><a href="#contact">Contact</a></li>
-                |
-            </ul>
-        </nav>
-    </header>
-    <!-- ./header -->
-
-    <!-- home -->
-    <div class="section" id="home" data-stellar-background-ratio="0.5">
-        <div class="container">
-            <div class="disply-table">
-                <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
-                    <h1><span class='W'>Julen Urain</span></h1>
-                    <h4>PhD candidate Robot Learning</h4></div>
-            </div>
-        </div>
-    </div>
-    <!-- ./home -->
-
-    <!-- about -->
-    <div class="section" id="about">
-        <div class="container">
-            <div class="col-md-6" data-aos="fade-up">
-                <h4>01</h4>
-                <h1 class="size-50"> About me</h1>
-                <div class="h-50"></div>
-                <p>I am a PhD student in Robot Learning at the Technische Universität Darmstadt(Germany), supervised by <a href="https://www.ias.informatik.tu-darmstadt.de/Member/JanPeters" target='blank'>Prof. Jan Peters</a>.
-                My interests are in Imitation Learning, in particular, in Representation Learning and Inductive Bias for Robotics and Sequential Decision Making.</p>
-                <p>Before my PhD, I completed a BSc in Physics & Electronics in UPV(Spain) and a MSc in Robotics and Control in UPC(Spain).
-                   I did my master thesis in Human-Robot Interaction in EPFL(Switzerland) in <a href="https://www.epfl.ch/labs/biorob/ " target='blank'>Biorobotics lab</a> under the supervsion of Prof. Auke Ijspeert and PhD. Jessica Lanini.
-                   After graduation, I took part in the Deep Learning and Robotics Challenge in <a href="https://datalab-munich.com/" target='blank'>VW Data:Lab</a> and worked for a year in a IK4(Spain), a Research Institute in Spain.</p>
-                <div class="h-50"></div>
-            </div>
-            <div class="col-md-6 about-img-div">
-                <div class="about-border" data-aos="fade-up" data-aos-delay=".5"></div>
-                <img src="Figures/me.jpg" width="400" class="img-responsive" alt="" align="right" data-aos="fade-right" data-aos-delay="0" />
-            </div>
-        </div>
-    </div>
-    <!-- ./about -->
-
-    <!-- publications  -->
-    <div class="section" id="experience">
-        <div class="container">
-            <div class="col-md-12">
-                <h4>02</h4>
-                <h1 class="size-50"><br /> Publications</h1>
-                <div class="h-50"></div>
-            </div>
-            <div class="col-md-12">
-                <ul class="timeline">
-                    {% for publication in site.publications %}
-                    <li class="timeline-event" data-aos="fade-up">
-                        <label class="timeline-event-icon"></label>
-                        <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">{{publication.where}}</p>
-                            <h3>{{publication.title}}</h3>
-                            <h4>{{publication.extra}}</h4>
-                            <p><strong>{{publication.authors}}</strong>
-                                <br>{{publication.content}}</p>
-                        </div>
-                    </li>
-                    {% else %}
-                      <h3>No Publicationswwee</h3>
-                    {% endfor %}
-                </ul>
-            </div>
-        </div>
-    </div>
-    <!-- ./publications -->
-
-    <!-- projects -->
-    <div class="section" id="projects">
-        <div class="container">
-            <div class="col-md-12">
-                <h4>03</h4>
-                <h1 class="size-50">My <br /> Blog posts</h1>
-            </div>
-            <!-- main container -->
-            <div class="main-container portfolio-inner clearfix">
-                <!-- portfolio div -->
-                <div class="portfolio-div">
-                    <div class="portfolio">
-                        <!-- portfolio_filter -->
-                        <div class="categories-grid wow fadeInLeft">
-                            <nav class="categories">
-                                <ul class="portfolio_filter">
-                                    <li><a href="" class="active" data-filter="*">All</a></li>
-                                    <li><a href="" data-filter=".stability">Stability</a></li>
-                                    <li><a href="" data-filter=".optimalcontrol">optimal control</a></li>
-                                    <li><a href="" data-filter=".reinforcementlearning">reinforcement learning</a></li>
-                                    <li><a href="" data-filter=".imitationlearning">imitation learning</a></li>
-                                    <li><a href="" data-filter=".generativemodelling">generative modelling</a></li>
-                                </ul>
-                            </nav>
-                        </div>
-                        <!-- portfolio_filter -->
-
-                        <!-- portfolio_container -->
-                        <div class="no-padding portfolio_container clearfix" data-aos="fade-up">
-                          {% for post in site.posts %}
-                            <!-- single work -->
-                            <div class="col-md-4 col-sm-6  {{post.fields}}">
-                                <a href="{{ post.url | prepend: site.baseurl }}" class="portfolio_item"> <img src="img/portfolio/01.jpg" alt="image" class="img-responsive" />
-                                    <div class="portfolio_item_hover">
-                                        <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>{{post.title}}</span> <em>{{post.extra}}</em> </div>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                            <!-- end single work -->
-                          {% else %}
-                            <h3>No Publicationswwee</h3>
-                          {% endfor %}
-                        </div>
-                        <!-- end portfolio_container -->
-                    </div>
-                    <!-- portfolio -->
-                </div>
-                <!-- end portfolio div -->
-            </div>
-            <!-- end main container -->
-        </div>
-    </div>
-    <!-- ./projects -->
-
-    <!-- contact -->
-    <div class="section" id="contact">
-        <div class="container">
-            <div class="col-md-12">
-                <h4>04</h4>
-                <h1 class="size-50">Contact  Me</h1>
-                <div class="h-50"></div>
-            </div>
-            <div class="col-md-4" data-aos="fade-up">
-
-                <h3>Email</h3>
-                <p>julen@robot-learning.de </p>
-
-                <h3>Social Network</h3>
-
-                <ul class="social">
-                    <li><a href="https://twitter.com/theCamusean"><i class="ion-social-twitter"></i></a></li>
-                    <li><a href="https://github.com/TheCamusean"><i class="ion-social-github"></i></a></li>
-                    <li><a href="https://scholar.google.com/citations?user=lx5qencAAAAJ&hl=en" target='blank'><i class="ion-university"></i></a></li>
-                </ul>
-                <div class="clearfix"></div>
-                <div class="h-50"></div>
-                <p>IAS, TU Darmstadt</p>
-                <p>Hochschulstr. 10, Room E225, Building S2|02,
-                64289 Darmstadt(Germany)</p>
-            </div>
-        </div>
-    </div>
-    <!-- ./contact -->
-
-    <!--DEMO01-->
-    <div id="animatedModal" class="popup-modal">
-        <!--THIS IS IMPORTANT! to close the modal, the class name has to match the name given on the ID -->
-        <div id="btn-close-modal" class="close-animatedModal close-popup-modal"> <i class="ion-close-round"></i> </div>
-        <div class="clearfix"></div>
-        <div class="modal-content">
-            <div class="container">
-                <div class="portfolio-padding">
-                    <div class="col-md-8 col-md-offset-2">
-                        <h2>Geschäfts Eines<br /> Web-Studios</h2>
-                        <div class="h-50"></div>
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value. Quickly promote premium strategic theme areas vis-a-vis.</p>
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value.</p>
-                        <br />
-                        <br /> <img src="img/portfolio/02.jpg" alt="" class="img-responsive" />
-                        <br />
-                        <br />
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value. Quickly promote premium strategic theme areas vis-a-vis.</p>
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value.</p>
-                        <br />
-                        <br /> </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
-    <!--  plugins  -->
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/aos.js"></script>
-    <script src="js/jquery.form.js"></script>
-    <script src="js/jquery.validate.min.js"></script>
-
-    <!--  main script  -->
-    <script src="js/custom.js"></script>
-</body>
+<!-- For styles with static names... -->
+<link href="{{ 'assets/css/style.css' | relative_url }}" rel="stylesheet">
+<!-- For documents/pages whose URLs can change... -->
+[{{ page.title }}]("{{ page.url | relative_url }}")
