--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -2,7 +2,27 @@
 layout: default
 ---
 
-<!-- For styles with static names... -->
-<link href="{{ 'assets/css/style.css' | relative_url }}" rel="stylesheet">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{{page.title}}</title>
+    <!-- <link rel="icon" href="Figures/icon.png" type="image/x-icon"> -->
+    <!-- Bootstrap -->
+    <link href="{{ 'css/bootstrap.min.css' | relative_url }}" rel="stylesheet">
+    <link href="{{ 'ionicons/css/ionicons.min.css' | relative_url }}" rel="stylesheet">
+    <link href="{{ 'css/animate.min.css' | relative_url }}" rel="stylesheet">
+    <link href="{{ 'css/aos.css' | relative_url }}" rel="stylesheet">
+    <!-- main style -->
+    <link href="{{ 'css/style.css' | relative_url }}" rel="stylesheet">
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+</head>
+
 <!-- For documents/pages whose URLs can change... -->
 [{{ page.title }}]("{{ page.url | relative_url }}")
