--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -36,7 +36,7 @@ layout: default
         <nav>
             <ul>
                 |
-                <li><a href="{{site.baseurl}}">Home</a></li>
+                <li><a href="https://thecamusean.github.io/">Home</a></li>
                 |
             </ul>
         </nav>
